use object-fit/object-position for work sample images - most use cover/center top to show relevant section of image - email image uses contain/center with matched background color to prevent cutting off text

--- a/main.css
+++ b/main.css
@@ -409,12 +409,24 @@ p.aside {
 }
 
 .samples .img-wrapper {
-  align-self: stretch; /* TODO: this line does nothing */
+  width: 100%;
+  min-width: 100%;
+  height: 225px;
+  max-height: 225px;
+  overflow: hidden;
 }
 
 .samples img {
-  max-height: 225px;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
+}
+
+.samples img.email {
+  background-color: rgb(223, 219, 211);
+  object-fit: contain;
+  object-position: center;
 }
 
 .samples p {
